--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
     "version": 2,
     "builds": [
-      { "src": "server/server.js", "use": "@vercel/node" },
+      { "src": "server/src/server.js", "use": "@vercel/node" },
       { "src": "client/package.json", "use": "@vercel/static-build" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/server/server.js" }
+      { "src": "/(.*)", "dest": "/server/src/server.js" }
     ]
   }
   
